--- a/app/src/main/res/layout/nagwa_item.xml
+++ b/app/src/main/res/layout/nagwa_item.xml
@@ -35,11 +35,23 @@
             android:layout_below="@id/item_type"
             android:text="download" />
 
+        <TextView
+            android:id="@+id/item_download_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/item_progressbar"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
         <ProgressBar
             android:id="@+id/item_progressbar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/item_type"
+            android:max="100"
+            android:padding="20dp"
             android:visibility="gone" />
     </RelativeLayout>
 
